# canary

./: README.md  README.rst  pyproject.toml
canary/: canary.py  file_processor.py  file_types.py
tests/: test_canary.py
